--- a/css/base/animations.css
+++ b/css/base/animations.css
@@ -33,3 +33,48 @@
     box-shadow: 0 0 10px #ff55d4;
   }
 }
+
+@keyframes scroll {
+  0% {
+    opacity: 0;
+    transform: translateY(40px) scale(0.1);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
+  }
+}
+
+@keyframes fadeAppear {
+  0% {
+    opacity: 0;
+    transform: scale(0.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeAppear_side {
+  0% {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@keyframes fadeAppear_side_2 {
+  0% {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
