--- a/css/pages/main.css
+++ b/css/pages/main.css
@@ -129,11 +129,10 @@ img {
 
 /* offcanvas */
 .offcanvTrigger {
-  display: none;
   background-color: transparent !important;
   position: fixed;
   top: 5%;
-  left: 5%;
+  left: 1%;
   z-index: 111;
   padding: 5px 10px;
   border: 1px solid #fff;
@@ -144,7 +143,7 @@ img {
 }
 
 .offcanvas {
-  background-color: #151853;
+  background-color: #15185398;
   backdrop-filter: blur(10px);
 
   .offcanvas-header {
@@ -164,6 +163,7 @@ img {
   }
 
   .offcanvas-body {
+    padding: 0;
     .nav-list {
       list-style: none;
       .nav-item {
@@ -178,6 +178,48 @@ img {
         .here {
           color: #c63fa4;
           font-weight: bolder;
+        }
+      }
+    }
+
+    .bottom {
+      position: fixed;
+      bottom: 0%;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 20px 0px;
+
+      .text {
+        p {
+          color: #fff;
+          span {
+            color: #c63fa4;
+            font-weight: bold;
+          }
+        }
+      }
+
+      .list {
+        ul {
+          padding: 0;
+          list-style: none;
+
+          i {
+            color: #fff;
+          }
+
+          li {
+            color: #fff;
+            display: inline;
+            margin: 0px 10px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+              color: #c63fa4;
+            }
+          }
         }
       }
     }
@@ -253,7 +295,7 @@ img {
         border-radius: 0 0 0 5px;
         text-align: center;
         position: absolute;
-        top: -30%;
+        top: -100%;
         right: 0%;
         transition: all 0.5s ease-in-out;
 
